--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,35 @@
     transform: rotate(360deg);
   }
 }
+.shadow {
+  background-color: white;
+  box-shadow: 0 3px 10px rgb(223, 222, 222);
+}
+body{
+  background-color: rgb(255, 255, 255);
+}
+.itemCard{
+  cursor: pointer;
+  display: block;
+  
+}
+.main-container{
+  margin-left: calc(10% + 36px);
+  margin-right: calc(10% + 36px);
+}
+
+.imgContainer{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  overflow: hidden;
+  filter: drop-shadow(rgba(0, 0, 0, 0.1) 0px 2px 8px);
+  width: 16rem;
+  height: 10rem;
+}
+.carouselContainer{
+  cursor: pointer;
+  display: block;
+ 
+}
